--- a/mystyle.css
+++ b/mystyle.css
@@ -1,4 +1,7 @@
 *{
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Balsamiq Sans', cursive;
     color: black;
+}
+h1{
+    font-family: fantasy;
 }
